--- a/index.html
+++ b/index.html
@@ -22,94 +22,90 @@
                 <div class="d-flex justify-content-center ms-2">
                     <div class="dropdown">
                         <button class="first-navbar-button font-14-400 separator-l separator transparent">About MDC</button>
-                        <div class="dropdown-content">
-                            <a href="//www.mdc.edu/about/">About Miami Dade College</a>
-                            <a href="//www.mdc.edu/accreditation/">Accreditation</a>
-                            <a href="//www.mdc.edu/future-students/">Future Students</a>
-                            <a href="//www.mdc.edu/president/">Office of the President</a>
-                            <a href="//www.mdc.edu/about/community.aspx">Community Engagement</a>
-                            <a href="//www.mdc.edu/campus-finder/">Campuses and Centers</a>
-                            <a href="//www.mdc.edu/jobs/">Jobs at MDC</a>
-                            <a href="//www.mdc.edu/sustainability/">Sustainability</a>
+                        <div class="dropdown-content shadow font-16-400">
+                            <a href="">About Miami Dade College</a>
+                            <a href="">Accreditation</a>
+                            <a href="">Future Students</a>
+                            <a href="">Office of the President</a>
+                            <a href="">Community Engagement</a>
+                            <a href="">Campuses and Centers</a>
+                            <a href="">Jobs at MDC</a>
+                            <a href="">Sustainability</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="first-navbar-button font-14-400 separator transparent">Academics</button>
-                        <div class="dropdown-content">
-                            <a class="dropdown-item dropdownListItems navbarHeaders" href="//www.mdc.edu/academics/"
-                                title="MDC Academic Programs">Academic Programs</a>
-                            <a href="//www.mdc.edu/academics/calendar/">Academic Calendar</a>
-                            <a href="//www.mdc.edu/honorscollege/">The Honors College</a>
-                            <a href="//www.mdc.edu/online/">MDC Online</a>
-                            <a href="//www.mdc.edu/ce/">Continuing Education</a>
-                            <a href="//www.mdc.edu/highschool/">High School Programs</a>
-                            <a href="http://nwsa.mdc.edu/">New World School of the Arts</a>
-                            <a href="//www.mdc.edu/learning-resources/">Libraries</a>
-                            <a href="//www.mdc.edu/learning-resources/about/">Learning Resources</a>
+                        <div class="dropdown-content shadow font-16-400">
+                            <a href="" >Academic Programs</a>
+                            <a href="">Academic Calendar</a>
+                            <a href="">The Honors College</a>
+                            <a href="">MDC Online</a>
+                            <a href="">Continuing Education</a>
+                            <a href="">High School Programs</a>
+                            <a href="">New World School of the Arts</a>
+                            <a href="">Libraries</a>
+                            <a href="">Learning Resources</a>
                         </div>
                     </div>
 
                     <div class="dropdown">
                         <button class="first-navbar-button font-14-400 separator transparent">Admissions</button>
-                        <div class="dropdown-content">
-                            <a href="//www.mdc.edu/admissions/" title="Apply to MDC">Apply Now</a>
-                            <a href="//www.mdc.edu/advisement/">Advisement</a>
-                            <a href="//www.mdc.edu/registration/">Register for Classes</a>
-                            <a href="//www.mdc.edu/transcripts/">Transcripts and Test Scores</a>
-                            <a href="//www.mdc.edu/veterans/">Veteran and Military Services</a>
-                            <a href="//www.mdc.edu/internationalstudents/">International Students</a>
-                            <a href="//www.mdc.edu/testing/">Testing and Assessment</a>
+                        <div class="dropdown-content shadow font-16-400">
+                            <a href="">Apply Now</a>
+                            <a href="">Advisement</a>
+                            <a href="">Register for Classes</a>
+                            <a href="">Transcripts and Test Scores</a>
+                            <a href="">Veteran and Military Services</a>
+                            <a href="">International Students</a>
+                            <a href="">Testing and Assessment</a>
                         </div>
                     </div>
 
                     <div class="dropdown">
                         <button class="first-navbar-button font-14-400 separator transparent">Paying for College</button>
-                        <div class="dropdown-content">
-                            <a href="//www.mdc.edu/tuition/">Tuition and Fees</a>
-                            <a href="//www.mdc.edu/financialaid/">Financial Aid</a>
-                            <a href="//www.mdc.edu/scholarships/" title="MDC Scholarships">Scholarships</a>
-                            <a href="//www.mdc.edu/costs/">Payment Options</a>
-                            <a href="//www.mdc.edu/workstudy/">Student Work Programs</a>
+                        <div class="dropdown-content shadow font-16-400">
+                            <a href="">Tuition and Fees</a>
+                            <a href="">Financial Aid</a>
+                            <a href="">Scholarships</a>
+                            <a href="">Payment Options</a>
+                            <a href="">Student Work Programs</a>
                         </div>
                     </div>
 
                     <div class="dropdown">
                         <button class="first-navbar-button font-14-400 separator transparent">Life at MDC</button>
-                        <div class="dropdown-content">
-                            <a href="//www.mdc.edu/arts-culture/">Arts &amp; Culture</a>
-                            <a href="//www.mdc.edu/mdcworks/">Career Services</a>
-                            <a href="//calendar.mdc.edu/">Events</a>
-                            <a href="//news.mdc.edu/">News</a>
-                            <a href="//www.mdc.edu/studentlife/">Student Life</a>
-                            <a href="//www.mdc.edu/student-wellness/">Student Wellness</a>
-                            <a href="//www.mdc.edu/athletics/">Athletics</a>
-                            <a href="//www.mdc.edu/safety/">Public Safety</a>
-                            <a href="//www.mdc.edu/collegeforum/">College Forum</a>
+                        <div class="dropdown-content shadow font-16-400">
+                            <a href="">Arts &amp; Culture</a>
+                            <a href="">Career Services</a>
+                            <a href="">Events</a>
+                            <a href="">News</a>
+                            <a href="">Student Life</a>
+                            <a href="">Student Wellness</a>
+                            <a href="">Athletics</a>
+                            <a href="">Public Safety</a>
+                            <a href="">College Forum</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="first-navbar-button font-14-400 separator transparent">Portals</button>
-                        <div class="dropdown-content">
-                            <span class="">Students</span>
-                            <a href="https://my.mdc.edu/">Student Portal</a>
-                            <a href="//www.mdc.edu/mdconnect/" title="MDConnect student link"
-                                target="_blank">MDConnect</a>
-                            <a href="https://mycourses.mdc.edu/" title="Log in to Blackboard"
-                                target="_blank">Blackboard</a>
-                            <a href="https://mdc.instructure.com/" target="_blank">Canvas</a>
-                            <a href="https://sharknet.mdc.edu/" target="_blank">SharkNet</a>
-                            <a href="http://email.mymdc.net/" target="_blank">Student Email</a>
-                            <a href="https://mdc.navigate.eab.com/" target="_blank">Navigate
+                        <div class="dropdown-content shadow font-16-400">
+                            <strong class="">Students</strong>
+                            <a href="">Student Portal</a>
+                            <a href="">MDConnect</a>
+                            <a href="">Blackboard</a>
+                            <a href="">Canvas</a>
+                            <a href="" target="_blank">SharkNet</a>
+                            <a href="">Student Email</a>
+                            <a href="">Navigate
                                 Student</a>
-                            <span class="">Employees</span>
-                            <a href="https://www.mdc.edu/employees/">Employee Portal</a>
-                            <a href="http://mdconnect.mdc.edu/" title="MDConnect employee link"
-                                target="_blank">MDConnect</a>
-                            <a href="//www.mdc.edu/owa/">Email</a>
-                            <a href="//www.mdc.edu/retirees/">Retiree Portal</a>
-                            <a href="https://mdc.campus.eab.com/" target="_blank">Navigate
+                            <strong class="">Employees</strong>
+                            <a href="">Employee Portal</a>
+                            <a href="">MDConnect</a>
+                            <a href="">Email</a>
+                            <a href="">Retiree Portal</a>
+                            <a href="">Navigate
                                 Staff</a>
-                            <a href="http://myoffice.mdc.edu/" target="_blank">Office 365</a>
+                            <a href="">Office 365</a>
                         </div>
                     </div>
                 </div>
@@ -137,12 +133,12 @@
                     <form class="d-flex justify-content-center search-bar">
                         <div class="col-auto me-2">
                             <label for="inputPassword2" class="visually-hidden">Password</label>
-                            <input type="password" class="form-control" id="inputPassword2"
+                            <input type="password" class="form-control rounded id="inputPassword2"
                                 placeholder="Search our programs">
                         </div>
                         <div class="col-auto">
-                            <button type="submit" class="btn bluecolor mb-3"><i
-                                    class="fa-solid fa-magnifying-glass fa-sm" style="color: #ffffff;"></i></button>
+                            <button type="submit" class="btn search-button rounded bluecolor mb-3">
+                                <i class="fa-solid fa-magnifying-glass fa-sm" style="color: #ffffff;"></i></button>
                         </div>
                     </form>
                 </div>
@@ -271,22 +267,24 @@
                         <h4 class="border-bottom-short form-title">Apply now</h4>
                     </div>
                     <form>
-                        <div class="form-element ">
-                            <span> <strong>Name</strong></span> <span><i class="red"> * </i></span>
-                            <input type="text" class="d-block w-100 border-light">
-                            <span class="text-secondary">First name</span>
+                        <div>
+                            <div class="form-element">
+                                <span> <strong>Name</strong></span> <span><i class="redcolor"> * </i></span>
+                                <input type="text" class="d-block w-100 border-light input-control">
+                                <span class="text-secondary">First name</span>
+                            </div>
+                            <div class="form-element">
+                                <input type="text" class="d-block w-100 border-light input-control">
+                                <span class="text-secondary">Last name</span>
+                            </div>
                         </div>
-                        <div class="form-element mt-1">
-                            <input type="text" class="d-block w-100 border-light">
-                            <span class="text-secondary">Last name</span>
-                        </div>
-                        <div class="d-flex w-100 mt-3">
+                        <div class="d-flex w-100 mt-2">
                             <div class="me-2 d-block w-100">
-                                <span class="d-block"> <strong>Email</strong></span>
-                                <input type="text" class="w-100 border-light">
+                                <span class="d-block mb-1"> <strong>Email</strong></span>
+                                <input type="text" class="w-100 border-light input-control">
                             </div>
                             <div class="d-block w-100 ms-2">
-                                <span class="d-block"><strong>Phone</strong></span>
+                                <span class="d-block mb-1"><strong>Phone</strong></span>
                                 <input type="text" class="w-100 border-light input-control">
                             </div>
                         </div>
@@ -394,7 +392,7 @@
                 <a class="a-footer">Accreditation</a>
             </div>
         </div>
-        <div class="container text-center gray-color font-13-400 pt-4 pb-4">
+        <div class="container text-center gray-color font-13-400 pt-3 pb-4">
             Miami Dade College is an equal access/equal opportunity institution which does not discriminate on
             the basis of sex, race, color, marital status, age, religion, national origin, disability, veteran’s
             status, ethnicity, pregnancy, sexual orientation or genetic information. Additional information may
